<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F7FE"
    android:layout_gravity="bottom"
    tools:context=".Activity.Home">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/halo"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/semoga_perjalananmu_menyenangkan"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/custborder">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:background="@color/white">
<!--Flight-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/linear_layout_btn">

                    <ImageButton
                        android:id="@+id/btn_flight"
                        style="@style/image_btn_menu"
                        android:src="@drawable/btn_flight" />

                    <TextView
                        style="@style/btn_main_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/flight" />
                </LinearLayout>
<!--hotels-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/linear_layout_btn">

                    <ImageButton
                        android:id="@+id/btn_hotels"
                        style="@style/image_btn_menu"
                        android:src="@drawable/btn_hotels" />

                    <TextView
                        style="@style/btn_main_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hotels" />
                </LinearLayout>
<!--                pariwisata-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/linear_layout_btn">

                    <ImageButton
                        android:id="@+id/btn_pariwisata"
                        style="@style/image_btn_menu"
                        android:src="@drawable/btn_pariwisata"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/btn_main_menu"
                        android:text="@string/pariwisata"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/linear_layout_btn">

                    <ImageButton
                        android:id="@+id/btn_travel"
                        style="@style/image_btn_menu"
                        android:src="@drawable/btn_travel" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/btn_main_menu"
                        android:text="@string/travel"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/linear_layout_btn">

                    <ImageButton
                        android:id="@+id/btn_bus"
                        style="@style/image_btn_menu"
                        android:src="@drawable/btn_bus" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/btn_main_menu"
                        android:text="@string/bus"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
